--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,10 @@
 }
 #choice-box {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /* 간격 조절 */
+  align-content: flex-start;
   width: 60vw;
-  height: 70vh;
+  height: 90vh;
   overflow: auto;
   padding-right: 1vw;
 }
@@ -25,8 +26,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 20vw;
-  height: 15vh;
+  width: 10vw;
+  height: 10vw;
   border: none;
   border-radius: 20px;
   margin: 10px;
