--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,8 @@
   padding-left: 1vw;
 }
 #admin-box {
-  display: none;
+  visibility: hidden;
+  display: flex;
   flex-direction: column;
   width: 20vw;
   padding-left: 1vw;
