--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 10vw;
-  height: 10vw;
+  width: 130px;
+  height: 130px;
   border: none;
   border-radius: 20px;
   margin: 10px;
